# KinTree

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml
server/: .env.example  alembic.ini  entrypoint.sh  pyproject.toml
server/app/: main.py
server/app/api/: exception_handlers.py
server/app/api/accounts/: routes.py
server/app/api/dependencies/: auth_dependencies.py  dependencies.py  permission_dependencies.py
server/app/api/persons/: routes.py
server/app/api/routes/: account_routes.py  auth_routes.py  family_routes.py  person_routes.py  relation_routes.py
server/app/api/schemas/: auth.py  base.py  family.py  person.py  relations.py
server/app/api/users/: routes.py
server/app/application/: dependencies.py  uow.py  uow_factory.py
server/app/application/account/: service.py
server/app/application/auth/: dependencies.py  dto.py  service.py
server/app/application/family/: commands.py  dto.py  services.py
server/app/application/permissions/: service.py
server/app/application/person/: commands.py  dto.py  service.py
server/app/application/relations/: commands.py  service.py
server/app/application/services/: account_service.py  person_service.py
server/app/cli/: cli.py
server/app/cli/commands/: upload_account_permissions.py  upload_account_roles.py  upload_account_roles_account_permissions.py  upload_all_fixtures.py  upload_roles_and_permissions.py
server/app/domain/: enums.py  exceptions.py  utils.py
server/app/domain/common/: filters.py  page.py  sort.py
server/app/domain/entities/: account.py  family.py  parent_child.py  permission.py  person.py  spouse.py
server/app/domain/filters/: base.py  page.py  specs.py
server/app/domain/models/: account.py  basemodel.py  family.py  parent_child.py  person.py  spouse.py
server/app/domain/permissions/: constants.py  enums.py
server/app/domain/repositories/: account.py  base.py  family.py  graph.py  parent_child.py  permission.py  person.py  relations.py  spouse.py
server/app/domain/schemas/: base.py  person.py
server/app/domain/services/: parent_child_policy.py  (+3 more)
server/app/infrastructure/: uow_factory.py
(+200 files in other folders)
